Add stereo panner

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
 	<div id="main" class="container">
 		<header id="header">
-			<img src="img/logo.png" alt="Web Audio Playground: A demonstration of the web audio API // v 1.0" />	
+			<img src="img/logo.png" alt="Web Audio Playground: A demonstrationz of the web audio API // v 1.0" />	
 		</header>
 		<nav id="nav">
 			<ul id="controls" class="container">
@@ -49,6 +49,8 @@
 							<li><a href="#" id="cgai">Gain Node</a></li>
 							<li><a href="#" id="ccon">Convolver</a></li>
 							<li><a href="#" id="cana">Analyser</a></li>
+							<li><a href="#" id="pan">Panner</a></li>
+
 						</ul>
 					</div>	
 				</li>
